GPC/tests/examples/fail/wrongTypeDecl.gpc


int GPRM::Test::wrongTypeDecl() {
    int x = 5 == 6;
    return x;
}
